RESOLVED FIXED213580
Content sometimes missing in nested scrollers with border-radius
https://bugs.webkit.org/show_bug.cgi?id=213580
Summary Content sometimes missing in nested scrollers with border-radius
Simon Fraser (smfr)
Reported 2020-06-24 17:16:45 PDT
Content sometimes missing in nested scrollers with border-radius
Attachments
Patch (7.64 KB, patch)
2020-06-24 17:19 PDT, Simon Fraser (smfr)
no flags
Patch (11.15 KB, patch)
2020-06-24 22:16 PDT, Simon Fraser (smfr)
no flags
Patch (18.92 KB, patch)
2020-06-25 14:20 PDT, Simon Fraser (smfr)
no flags
Patch (19.25 KB, patch)
2020-06-26 10:14 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-06-24 17:19:20 PDT
Simon Fraser (smfr)
Comment 2 2020-06-24 17:19:23 PDT
Simon Fraser (smfr)
Comment 3 2020-06-24 22:16:01 PDT
Simon Fraser (smfr)
Comment 4 2020-06-25 14:20:43 PDT
Simon Fraser (smfr)
Comment 5 2020-06-26 10:14:53 PDT
EWS
Comment 6 2020-06-26 13:16:38 PDT
Committed r263578: <https://trac.webkit.org/changeset/263578> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402879 [details].
Note You need to log in before you can comment on or make changes to this bug.