Content sometimes missing in nested scrollers with border-radius https://bugs.webkit.org/show_bug.cgi?id=213580 <rdar://problem/64460373>

Reviewed by Zalan Bujtas.
Source/WebCore:

RenderLayer::clipToRect() has a special case for clips involving border-radius,
involving an ancestor tree walk which applies the rounded clips.

When inside composited overflow, don't include the border-radius from the scroller since
that does its own clipping.

Test: compositing/clipping/nested-overflow-with-border-radius.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::clipToRect):
(WebCore::RenderLayer::calculateClipRects const):
* rendering/RenderLayer.h:

LayoutTests:

* compositing/clipping/nested-overflow-with-border-radius-expected.html: Added.
* compositing/clipping/nested-overflow-with-border-radius.html: Added.
* compositing/hidpi-compositing-layer-with-tile-layers-on-subpixel-position-expected.html:
* compositing/hidpi-compositing-layer-with-tile-layers-on-subpixel-position.html: Tweak the colors and radii to make failures on this test more obvious.


Canonical link: https://commits.webkit.org/226454@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263578 268f45cc-cd09-0410-ab3c-d52691b4dbfc